public/css/common.css
/** Added for text field make red border **/
.emptyBox
{
    border:1px solid #ff0000!important;
}
.mandatoryTextBox
{
   background-color: #FAA9A3;
   color: #000000;
}
.mandatoryTextBoxCV
{
    background-color: #FAA9A3!important;
    color: #000000!important;
}
.msgRed
{
    color :#FF0000;
    margin-left:-10px!important;
    margin-top:10px!important;
}
.msgBox
{
 height: 65px;
 width: 100%;
}
.selectedNotification {
    opacity: 10 !important;
}
.setHeader
{
    color: #000000;
    font-size: 16px;
}
#previousNote
{
    height: 50px;
    max-height: 50px;
}
.addNote
{
    margin-top: 2%;
}
.orangeActiveButton
{
    background-color: #FBB917 !important;
    background: url("") repeat;
}
.fixTextArea
{
    width: 600px;
    min-width:580px;
    max-width:580px;

    height:65px;
    min-height:65px;
    max-height:65px;
}
.closeHomeDelivery {
    width: 50px;
    height: 50px;
    border-radius: 50px;
    text-align: center;
    top: -26px;
    cursor: pointer;
    right: -25px;
    position: absolute;
    background: url(../images/close_icon.png) no-repeat;
    text-indent: -999px;
    overflow: hidden;
}
.datePickerWidth{

}
.appoint_marT{
    margin-top:8px;

}
.closeCV {
    width: 50px;
    height: 50px;
    border-radius: 50px;
    text-align: center;
    top: -26px;
    cursor: pointer;
    right: -25px;
    position: absolute;
    background: url(../images/close_icon.png) no-repeat;
    text-indent: -999px;
    overflow: hidden;
}
.closeCVSmall {
    width: 53px;
    height: 25px;
    border-radius: 50px;
    text-align: center;
    top: -9px;
    cursor: pointer;
    right: -44px;
    position: absolute;
    background: url(../images/small_close.png) no-repeat;
    text-indent: -999px;
    overflow: hidden;
}
.no_select {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
.termsMargin
{
   padding-top:1%!important;
    display: block;

}

.tabDisplay{
    text-align: center;
    list-style: none;
    margin: 0px;
    padding-left: 0;
    height: 30px;
    right: 0;
    position: absolute;
    z-index: 1000;
    margin-right: 6px;
}
.tab {
    float: left;
    padding: 5px;
    border: 1px solid #ffffff;
    border-right: 0px;
    border-top: 0px;
    /* margin-top: 1px; */
    cursor: pointer;
    min-width: 100px;
    background-color: #2791BA;
    color: #ffffff;
}

.tabDisplay > .tab:active{
    border-bottom: none;
    color:#48ABD2;
}

.tabActive{
    border-bottom: none;
    color:#48ABD2;
    background:none;
}

.tabActive:first-child{
    border-left:none;
}

.tab:last-child{
    border-radius: 0px 22px 0px 0px;
}

.tab:first-child{
    border: none;
}

.wd66p{
    width: 66%!important;
}

.wd11p{
    width: 11%!important;
}

.wd88p{
    width: 88%!important;
}

.setPinDiv
{
    padding-left: 13%;
}

/**********************************************/
.row-margin-fix{
    margin-left: -10px;
    margin-right: -10px;
}

.bottom-clearfix{
    margin-bottom:10px;
}

#map-canvasH{
    height: 360px;
    width: 100%;
}


/**********************************************/
.row-margin-fix{
    margin-left: -10px;
    margin-right: -10px;
}

.bottom-clearfix{
    margin-bottom:10px;
}

#map-canvasH{
    height: 360px;
    width: 100%;
}

.app-store{
    float:right;
    margin-top:-40px;
    padding-top:2px;
}

.apple{
    background: url('../images/logo-app_store.png');
    height: 50px;
    display: block;
    width: 100px;
    background-size: contain;
    background-repeat: no-repeat;
    float: left;
}

.google-play{
    background: url('../images/icon-google-play.png');
    height: 50px;
    display: block;
    width: 100px;
    background-size: contain;
    background-repeat: no-repeat;
    float:left;
        margin-left:5px;
}
footer{
    position: static;
    bottom: 0;
}

footer p{
    padding-top:10px;
}

footer .social-media{
    margin-top:-30px;
}

.info-tab-text-center{
 height: 30px;
padding: 10px;
display: block;
font-size: 20px;
color: #188FBE;
text-shadow: none;
margin-bottom: 10px;
}

.ng-toast{
    position: absolute;
    z-index: 1080;
    top:0;
    right:0;
}

.tab-view{
    position: absolute;
    height: 92%;
    width: 98%;
    margin-left: 1px;
    overflow: hidden;
    margin-top: -1px;
}
.level-1{
    /*z-index: 1110;*/
    z-index: 11;
}

.navbar-fixed-top{
    z-index: 1111;
}

.info-icon-btn {
    width: 70px;
    height: 70px;
    display: inline-block;
    padding: 0px;
    margin: 0 10px;
    background: url(../images/info-icons.png) no-repeat top left;
    overflow: hidden;
    text-indent: -999px;
    -webkit-transition-duration: 0.8s;
    -moz-transition-duration: 0.8s;
    -o-transition-duration: 0.8s;
    transition-duration: 0.8s;
    -webkit-transition-property: -webkit-transform;
    -moz-transition-property: -moz-transform;
    -o-transition-property: -o-transform;
    transition-property: transform;
    background-color: transparent;
    border-color: transparent;
}

.info-icon-btn.noti-icon {
    background-position: -250px;
}

.info-icon-btn.appoinment-icon{
    background-position: -440px;
}

.info-icon-btn.direction-icon{
    background-position: -310px;
}

.info-icon-btn.sales-icon{
   background-position: -130px;
}

.info-icon-btn.reservation-icon{
    background-position: -190px;
}

.info-icon-btn.support-icon{
    background-position: -10px;
}

.info-icon-btn.sendcv-icon{
    background-position: -70px;
}

.info-icon-btn.home-icon{
    background-position: -375px;
}

/**
TABS FOR LOCATION CONTROLLER
*/
.loc-tab{
    background: #F5F5F5;
    position: absolute;
    z-index: 500;
    height: 580;
    max-height: 580px;
    overflow: none;
    overflow-x: none;
    overflow-y: auto;
    width: 100%;
    
}

.loc-level-1{
    z-index: 1000;
    margin-left:-5px;
}

.roll-up{
    height: 0px;
    overflow: hidden;
}
.height-600{
    height:600px;
}

.height-400{
    height: 400px;
}
.setAttachLogo
{
    margin-left: -53px;
}
.setAttachLogoPosition
{
    margin-left: 1px;
}

.btn-camera{
    background: url('../images/camera.png');
height: 40px;
width: 40px;
outline: none;
border: none;
background-size: contain;
display: inline-block;
position: absolute;
margin-top: -5px;
margin-left: 5px;
}
.btn-nocamera{
    background: url('../images/no_camera.png');
    height: 40px;
    width: 40px;
    outline: none;
    border: none;
    background-size: contain;
    display: inline-block;
    position: absolute;
    margin-top: -5px;
    margin-left: 5px;
}
.setUpperChar
{
    text-transform:uppercase;
}
/*********************** Footer fix *************************/

html, body {
  height: 100%;
}

.container-fluid{
    min-height: 100%;
    margin-bottom: -60px;
}

.container-fluid:after{
    height:80px;
    content:"";
    display:block;
}

/** Fix for google maps autocomplete not appearing **/
.pac-container{
    z-index: 1200;
}
.starRating{
    display        : inline-block;
    position       : relative;
    height         : 24px;
    background     : url('../images/stars.png') repeat-x 0 0;
    vertical-align : bottom;
}

.starRating div{
    float    : left;
    position : relative;
    height   : 24px;
}

.starRating input{
    position : relative;
    z-index  : 1;
    width    : 24px;
    height   : 24px;
    margin   : 0;
    padding  : 0;
    opacity  : 0;
}

.starRating label{
    position : absolute;
    top      : 0;
    left     : 0;
    width    : 100%;
    height   : 24px;
}

.starRating span{
    display : none;
}

.starRating       input:checked       + label{
    background : url('../images/stars.png') repeat-x 0 -24px;
}
/*
.starRating:hover input:checked + label{
    background : transparent;
}

.starRating:hover input:hover + label{
    background : url('../images/stars.png') repeat-x 0 -48px;
}
*/

.sliderExample {
    width: 640px;
    padding: 2em;
    background-color: #f5f5f5;
    border: 1px solid #f0f0f0;
    margin: 2em;
}
.sliderExample > div {
    margin: 1em 0;
}
.vertical-container {
    width: 15%;
    display: inline-block;
}
#swatch {
    width: 100px;
    height: 100px;
    border: 1px solid black;
}
#red .ui-slider-range { background: #ef2929; }
#red .ui-slider-handle { border-color: #ef2929; }
#green .ui-slider-range { background: #8ae234; }
#green .ui-slider-handle { border-color: #8ae234; }
#blue .ui-slider-range { background: #729fcf; }
#blue .ui-slider-handle { border-color: #729fcf; }

.icon-ok {
    background-position: -288px 0!important;
}
[class^="icon-"], [class*=" icon-"] {
    display: inline-block;
    width: 18px;
    height: 20px;
    line-height: 14px;
    vertical-align: text-top;
    background-image: url("../images/glyphicons-halflings.png");
    background-position: 14px 14px;
    background-repeat: no-repeat;
    margin-top: 1px;
}
.icon-ok-sign {
    background-position: -72px -96px;
}
.icon-remove-sign {
    background-position: -48px -96px;
}
.searchAreaSize
{
    width: 73.666667% !important;
}
#fileupload-resize-area{
    display: none;
}

